--- a/main.css
+++ b/main.css
@@ -1,16 +1,16 @@
 @font-face {
-    src: url("./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.woff2") format("woff2"),
-         url('./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.woff') format("woff"),
+    src: url("fonts/CondorVariable-VF-Edu.ttf") format("ttf"),
+         url('fonts/CondorVariable-VF-Edu.woff2') format("woff2"),
         url('./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.ttf') format('truetype');
 
-    font-family: 'Forma';
+    font-family: 'Condor';
     font-style: normal;
     font-weight: normal;
     }
     
     body{
     background-color: lightsteelblue;
-    font-family: 'Forma';
+    font-family: 'Condor';
 }
 /* how the page wrapper will appear on mobile */
 .page-wrapper{
@@ -57,9 +57,9 @@ h3{
 
 @keyframes weightChange {
     0%, 100%{
-        font-variation-settings: "opsz" 16, "wght" 200, "slnt" 0;
+        font-variation-settings: "wght" 200, "wdth" 50, "ital" 0;
     }
-    50%{font-variation-settings: "opsz" 16, "wght" 900, "slnt" -13;
+    50%{font-variation-settings: "wght" 900, "wdth" 175, "ital" 0;
     }
     
 }
