--- a/main.css
+++ b/main.css
@@ -28,26 +28,85 @@ background-size: cover;
 height: 270px;
 }
 
+
+
 #history {
-    grid-area: h; height: 220px;
+    grid-area: h; height: 250px;
     background-color: #E3BA49;
-    }
+    display: grid;
+    grid-gap: 3px;
+       /* space around the whole box */
+       padding: 5px;
+       grid-template-columns: repeat(12, 1fr);
+       grid-template-rows: auto auto auto;
+        grid-template-areas: 
+           ". h h h . . . . . c c ."
+           ". p p p p p p p p p p ."
+           ". p p p p p p p p p p .";
+}
+
+.history-header{
+  grid-area: h;
+  /* font-size: 40px;
+  margin-left: 50px; */
+}
+
+.custom-link{
+  grid-area: c;
+  /* text-align: right;
+  margin-right: 50px; */
+}
+
+.history-paragraph{
+    grid-area: p;
+    width: min(100% - 3rem, 100ch);
+    /* margin-left: 140px; */
+}
 
 h1 {
-    margin-left: 140px;
+    /* margin-left: 140px; */
     font-size: 30px;
 }
-.history-paragraph{
-        width: min(100% - 3rem, 100ch);
-        margin-left: 140px;
-}
+
+.custom-link {
+    display: inline-block;
+    padding: 0.5em 1em;
+    background-color: #0b2f0b; /* green */
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    position: relative;
+    margin: 30px;
+    overflow: hidden;
+  }
+
+  .custom-link::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    top: 0;
+    left: -100%;
+    transition: left 0.3s;
+  }
+
+  .custom-link:hover::before {
+    left: 0;
+  }
+
+  /* Custom link hover effect */
+  .custom-link:hover {
+    background-color: #1a451a; /* darker green */
+  }
+
+
 /* how the page wrapper appears on desktop */
 
 h3{
     color: #E3BA49;
 }
 
-/* mobile styling */
 
 /* .page-wrapper{
 display: grid;
@@ -69,22 +128,22 @@ grid-area: v;
 }
 h5{
     font-size: 30px;
-    margin-left: 140px;
+    margin-left: 115px;
 }
+
 .numbers{
-    margin-left: 150px;
+    margin-left: 115px;
     font-size: 20px;
 
 }
 .symbols{
-    margin-left: 150px;
+    margin-left: 115px;
     font-size: 20px;
 
 }
 #variations {
     color: #E3BA49;
 }
-
 
 .alphabet {
 grid-area: a;
@@ -94,12 +153,14 @@ h2{
 }
 #alphabet{
     color: #E3BA49;
-    margin-left: 150px;
+    margin-left: 115px;
     font-size: 40px;
 }
 
 .light{
     font-variation-settings: "wght" 200, "wdth" 100, "ital" 0;
+    width: min(100% - 3rem, 100ch);
+
 }
 .lightslant{
     font-variation-settings: "wght" 200, "wdth" 100, "ital" 20;
@@ -123,15 +184,15 @@ h2{
 }
 .weight{
     font-size: 20px;
-    margin-left: 150px;
+    margin-left: 115px;
 }
 .width{
     font-size: 20px;
-    margin-left: 150px;
+    margin-left: 115px;
 }
 .italic{
     font-size: 20px;
-    margin-left: 150px;
+    margin-left: 115px;
 }
 
 
