--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ padding-top: 100px;
 
 .history-header{
   grid-area: h;
+  color: #0b2f0b;
   /* font-size: 40px;
   margin-left: 50px; */
 }
@@ -60,6 +61,7 @@ padding-top: 100px;
 }
 
 .history-paragraph{
+    color: #0b2f0b;
     grid-area: p;
     width: min(100% - 3rem, 100ch);
     /* margin-left: 140px; */
@@ -68,6 +70,7 @@ padding-top: 100px;
 h1 {
     /* margin-left: 140px; */
     font-size: 30px;
+    color: #0b2f0b;
 }
 
 .custom-link {
