--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ padding-top: 100px;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: auto auto auto;
         grid-template-areas: 
-           ". h h h . . . c c . . ."
+           ". h h h . . . c c c c ."
            ". p p p p p p p p p p ."
            ". p p p p p p p p p p .";
 }
